ripe-atlas/deployment-ripe-atlas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ripe-atlas
  namespace: ripe-atlas
  labels:
    app.kubernetes.io/name: ripe-atlas
    app.kubernetes.io/instance: ripe-atlas
    app.kubernetes.io/managed-by: argoCD
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ripe-atlas
      app.kubernetes.io/instance: ripe-atlas
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ripe-atlas
        app.kubernetes.io/instance: ripe-atlas
    spec:
      priorityClassName: homelab-standard
      automountServiceAccountToken: false
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      terminationGracePeriodSeconds: 60
      nodeSelector:
        kubernetes.io/arch: amd64
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ripe-atlas
          image: harbor.andreybondarenko.com/library/ripe-atlas:2026-09-28-022902
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /etc/ripe-atlas
            - name: spool
              mountPath: /var/spool/ripe-atlas
            - name: spool
              mountPath: /home/atlas/data
              subPath: data
            - name: run
              mountPath: /run/ripe-atlas
            - name: run
              mountPath: /home/atlas/status
              subPath: status
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ripe-atlas-config
        - name: spool
          persistentVolumeClaim:
            claimName: ripe-atlas-spool
        - name: run
          emptyDir:
            sizeLimit: 64Mi
        - name: tmp
          emptyDir:
            sizeLimit: 64Mi
